--- a/wildlife/animat.css
+++ b/wildlife/animat.css
@@ -18,3 +18,12 @@ a:active {
 }
 
 
+
+#button2:hover {
+    background-color: #e39128;
+    border: 2px solid #e39128;
+}
+
+#button2:active {
+    background-color: rgba(41, 41, 41, 2);
+}
