--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -11,13 +11,18 @@
     width: 100vw;
     display: flex;
     justify-content: center;
+    background-color: #02160b;
 }
-  
-.header {
+
+.up{
     width: 100%;
     max-width: 1080px;
     height: 100%;
-    min-height: 780px;
+    min-height: 780px; 
+    
+    background-image: url(fox_back.png);
+}
+.header {
 
     display: flex;
     justify-content: space-around;
@@ -87,12 +92,79 @@ h1 {
     color: #f7f7f7;
 }
 
-header {
-    background-image: url(fox_back.png);
+.survival{
+    display: flex;
+    align-items: flex-end;
+    height:460px;
+    /* background-color: aqua; */
+    width: 395px;
+    justify-content: flex-end;
+    
 }
 
-.hidenh1 {
-    background-color: black;
-    visibility: hidden;
+.med {
+    width: 275px;
+    height: 340px;
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
 }
 
+.med_title {
+    width: 199px;
+    height: 72px;
+
+    color: #CD6326;
+}
+
+.med_text {
+    width: 274px;
+    height: 108px;
+
+    font-style: normal;
+
+    font-size: 18px;
+
+    font-weight: 400;
+
+    line-height: 27px;
+    letter-spacing: 0em;
+
+    color: rgba(247, 247, 247, 1);
+}
+
+.med_donate {
+    width: 160px;
+    height: 60px;
+
+    font-family: Roboto;
+    font-style: normal;
+    
+    font-size: 23px;
+
+    font-weight: 400;
+
+    line-height: 27px;
+
+    letter-spacing: 0em;
+
+}
+
+#button2 {
+    height: 60px;
+    width: 160px;
+
+    background-color: #cd6326;
+}
+
+#tt {
+    color:rgb(205, 99, 38);
+
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 72px;
+    letter-spacing: 2px;
+}
