--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -96,7 +96,6 @@ h1 {
     display: flex;
     align-items: flex-end;
     height:460px;
-    /* background-color: aqua; */
     width: 395px;
     justify-content: flex-end;
     
@@ -167,4 +166,25 @@ h1 {
     font-weight: 400;
     line-height: 72px;
     letter-spacing: 2px;
+}
+
+/* Нижняя часть */
+
+.wild-articles {
+    width: 100vw;
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+
+    background-color: #02160b;
+}
+
+.last_articles {
+    width: 100%;
+    max-width: 1080px;
+    height: 100%;
+    min-height: 780px; 
+    
+    background-color: #cccccc;
 }
