--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -200,6 +200,7 @@ h1 {
     height: 270px;
 
     display: flex;
+    justify-content: center;
 
     flex-direction: column;
 }
@@ -285,14 +286,85 @@ h1 {
     color: white;
 }
 
+.picture__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 22px;
+
+    margin-bottom: 40px;
+}
+
 /* Подвал (Basement) */
 
 .articles__basement {
-    height: 500px;
+    height: 600px;
 
     display: flex;
     flex-direction: column;
 
     align-items: center;
     justify-content: space-around;
+}
+
+.ddddd {
+    height: 170px;
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: space-around;
+}
+
+#dd_text {
+    text-align: center;
+    font-style: normal;
+
+    font-size: 27px;
+
+    font-weight: 400;
+    line-height: 41px;
+    letter-spacing: 0em;
+}
+
+.pole__email {
+    width: 650px;
+    height: 60px;
+    
+    font-family: Roboto;
+    font-style: normal;
+
+    font-size: 23px;
+
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0em;
+
+    text-align: left;
+    border-color: #666666;
+    background: #cccccc;
+}
+
+.button__send {
+    width: 120px;
+    height: 60px;
+
+    border-radius: 5px;
+
+    background: rgba(205, 99, 38, 1);
+    color:white;
+}
+
+.ddddd__email {
+    display: flex;
+    align-items: center;
+}
+
+.form_center {
+    height: 63px;
+
+    display: flex;
+    align-items: center;
 }
