--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -403,14 +403,19 @@ h1 {
 
 }
 .footer__logo {
-    width: 240px;
+    width: 210px;
     height: 60px;
   
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
+.left__footer_block {
+    display: flex;
+    
+    justify-content: space-around;
 
+}
 
 .middle__footer {
     width: 480px;
@@ -420,7 +425,7 @@ h1 {
 
 }
 .ul__footer__middle {
-    width: 460px;
+    width: 480px;
 
     display: flex;
     justify-content: space-between;
@@ -442,6 +447,6 @@ h1 {
     width: 250px;
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
